--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -53,14 +53,68 @@
     .projects {
         grid-template-columns: repeat(2, 1fr);
     }
+    .boxes {
+        div {
+            font-size: 1.4rem;
+        }
+    }
 }
 
 // Smartphones
 @include mediaSm {
-    main#home h1 {
-        margin-top: 10vh;
+    p {
+        text-align: left;
+    }
+    h6 {
+        font-size: 1rem;
+        margin: 0.6rem 0;
+    }
+    main {
+        .lg-heading {
+            font-size: 3.5rem;
+            padding-bottom: 4vh;
+        }
+        h2 {
+            font-size: 1.4rem;
+        }
+    }
+    main#home {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .lg-heading {
+            margin-top: 1rem;
+        }
     }
     .projects {
         grid-template-columns: 1fr;
+    }
+    main#about {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .lg-heading {
+            margin-top: 1rem;
+        }
+        .bio-image {
+            width: 60%;
+        }
+        .bio {
+            p {
+                font-size: 1.2rem;
+                margin-top: 0;
+            }
+        }
+    }
+    main#contact {
+        .boxes {
+            div {
+                padding: 10px;
+                font-size: 1.2rem;
+                p {
+                    margin: 0
+                }
+            }
+        }
     }
 }
