--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,7 +46,7 @@ header {
 }
 
 main {
-    padding: 4rem;
+    padding: 4rem 1.4rem;
     //height: 100%;
     min-height: calc(100vh - 60px);
     .icons {
@@ -126,6 +126,7 @@ main {
         border: 3px #fff solid;
         padding: 1.5rem 2.5rem;
         margin-bottom: 3rem;
+        max-width: 90%;
         @include easeOut;
         &:hover {
             padding: 0.5rem 1.5rem;
