--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -32,12 +32,12 @@
         }
     }
     .menu-nav {
-        height: 75vh;
+        height: 65vh;
         transform: translate3d(-100%, 0, 0);
         font-size: 24px;
     }
     .menu-branding {
-        height: 25vh;
+        height: 35vh;
         transform: translate3d(100%, 0, 0);
         .portrait {
             background: url('../img/pretobranco_small.jpg');
@@ -97,11 +97,12 @@
             margin-top: 1rem;
         }
         .bio-image {
-            width: 60%;
+            width: 50%;
+            padding: 0;
         }
         .bio {
             p {
-                font-size: 1.2rem;
+                font-size: 1rem;
                 margin-top: 0;
             }
         }
@@ -116,5 +117,8 @@
                 }
             }
         }
+    }
+    .menu .nav-link {
+        font-size: 24px;
     }
 }
